# btc2sim

./: .gitignore  Modelfile  README.md  TODO.md  app.py  bank.db  bt.yaml  bt_bank.yaml  bts.txt  conf.yaml  config.yaml  ddl.sql  grammar.lark  grammar.peg  ludens.py  main.py  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt  test.py
.ipynb_checkpoints/: bt_bank-Copy1-checkpoint.yaml  grammar-checkpoint.lark  ludens-checkpoint.py  notebook-checkpoint.ipynb  old_grammar-checkpoint.lark
.streamlit/: config.toml
aic2sim/: __init__.py  act.py  app.py  dsl.py  gps.py  lxm.py  types.py  utils.py
bank/: ally.bt  default.bt  enemy.bt  main.bt
btc2sim/: __init__.py  act.py  app.py  atomics.py  bt.py  bts.py  classes.py  dsl.py  gps.py  hello.py  info.py  lxm.py  old_bt.py  types.py  utils.py
btc2sim/.ipynb_checkpoints/: __init__-checkpoint.py  atomics-checkpoint.py  bt-checkpoint.py  dsl-checkpoint.py  info-checkpoint.py  o__init__-checkpoint.py
c2sim/: __init__.py  agent.py  atomics.py  bank.py  bt.py  dsl.py  info.py  types.py  utils.py
data/: bank.yaml  bt.yaml  dot.txt  info.txt  llm.txt  pln.txt  prompt.txt  roe.txt
docs/: journal.md  report.md  slides.md  slides.tex  slides.typ
src/: __init__.py  atomics.py  bank.py  bt.py  llm.py  plot.py  quarks.py  smax.py  train.py  utils.py
www/: README.md  package-lock.json  package.json
www/src/: app.html  global.css
www/src/lib/: api.ts  types.ts  utils.ts  ws.ts
www/src/routes/: +layout.svelte  +page.svelte
