[tool.poetry]
name = "btc2sim"
version = "0.0.19"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
lark = "^1.1.9"
functional = "^0.4"
jupyterlab = "^4.2.4"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
einops = "^0.8.0"
tqdm = "^4.66.5"
jax = "^0.6.0"
chex = "^0.1.89"
equinox = "^0.11.12"
flax = "^0.10.4"
aim = "^3.27.0"
jraph = "^0.0.6.dev0"
textx = "^4.1.0"
parsimonious = "^0.10.0"

[tool.poetry.group.dev.dependencies]
parabellum = { path = "../parabellum" }
esch = { path = "../../esch" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
