[project]
name = "aic2sim"
version = "0.0.29"
description = ""
authors = [{ name = "Noah Syrkis", email = "noah@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "lark>=1.1.9,<2",
    "functional>=0.4,<0.5",
    "jupyterlab>=4.2.4,<5",
    "notebook>=7.2.1,<8",
    "ipykernel>=6.29.5,<7",
    "einops>=0.8.0,<0.9",
    "tqdm>=4.66.5,<5",
    "jax>=0.6.0,<0.7",
    "chex>=0.1.89,<0.2",
    "flax>=0.10.4,<0.11",
    "aim>=3.27.0,<4",
    "jraph>=0.0.6.dev0,<0.0.7",
    "textx>=4.1.0,<5",
    "parsimonious>=0.10.0,<0.11",
    "networkx>=3.4.2",
    "pydot<4",
    "opencv-python>=4.11.0.86",
    "fastapi[standard]>=0.115.12",
    "ollama>=0.5.1",
    "equinox>=0.11.12",
]

[dependency-groups]
dev = ["parabellum", "esch"]

[tool.uv]

[tool.uv.sources]
parabellum = { path = "../parabellum" }
esch = { path = "../../esch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
